--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10662,8 +10662,12 @@ a.text-dark:focus {
   }
 }
 
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+.rating-company {
+  padding: 5px;
+}
+
+.rating-company:hover {
+  color: white;
+  background: #e77817;
 }
 
