--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,3 +14,15 @@
 a, a:hover {
   color: #6c757d;
 }
+
+.avatar {
+  height: 50px;
+  width: 50px;
+  border-radius: 25px;
+  overflow: hidden;
+  vertical-align: bottom;
+  display: inline-block;
+  img {
+    max-width: 100%;
+  }
+}
